# py-eth-sig-utils

./: pyproject.toml  requirements.txt
py_eth_sig_utils/eip712/: encoding.py
