[tool.poetry]
name = "py-eth-sig-utils"
version = "0.4.99"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.8.13"
eth-abi = ">=5.0.1"
pycryptodome = ">=3.4.7"
py-ecc = ">=1.7.1"
rlp = ">=1.1.0"
pytest = {version = "^8.1.1", extras = ["dev"]}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
